web/kustomize/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-3tier-app2-web
  labels:
    app: node-3tier-app2-web
spec:
  selector:
    matchLabels:
      app: node-3tier-app2-web
  template:
    metadata:
      labels:
        app: node-3tier-app2-web
    spec:
      containers:
      - name: node-3tier-app2-web
        image: gbulanov/node-3tier-app2-web
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
